<resources>
    <string name="statistics_fragment">Statistika</string>
    <string name="settings_fragment">Postavke</string>
    <string name="deliverer_fragment">Dostavljac</string>
    <string name="client_fragment">Naručitelj</string>

    <string name="app_name">MyGroceryPal</string>

    <string name="forgotPassword">Zaboravljena lozinka?</string>
    <string name="registrationOnLogin">Nemate račun? Registrirajte se!</string>
    <string name="login">Prijava</string>
    <string name="register">Registriraj se!</string>
    <string name="firstName">Ime</string>
    <string name="lastName">Prezime</string>
    <string name="email">Email</string>
    <string name="password">Lozinka</string>
    <string name="repeatPassword">Ponovite lozinku</string>
    <string name="address">Adresa</string>
    <string name="city">Grad</string>
    <string name="birthDate">Datum rođenja</string>
    <string name="contact">Kontakt</string>
    <string name="back">Povratak</string>
    <string name="send">Pošalji</string>
    <string name="confirm">Potvrdi</string>
    <string name="pleaseInsertEmail">Molimo Vas, unesite Vašu e-mail adresu!</string>
    <string name="activeCaps">AKTIVNI</string>
    <string name="pastCaps">PROŠLI</string>
    <string name="ignoredCaps">IGNORIRANI</string>
    <string name="finishedCaps">DOSTAVLJENI</string>
    <string name="acceptedCaps">PRIHVAĆENI</string>
    <string name="printLocation">ISPIŠI LOKACIJU</string>
    <string name="acceptCaps">PRIHVATI</string>
    <string name="confirmCaps">POTVRDI</string>
    <string name="ignoreCaps">IGNORIRAJ</string>
    <string name="returnCaps">VRATI</string>
    <string name="repeatCaps">PONOVI</string>
    <string name="plusCaps" translatable="false">+</string>
    <string name="minusCaps" translatable="false">-</string>
    <string name="changeCaps">PROMIJENI</string>
    <string name="changeHeadingCaps">PROMIJENA</string>
    <string name="changePasswordCaps">PROMIJENI LOZINKU</string>
    <string name="userIban">IBAN</string>
    <string name="currency"> Kn</string>


    <string name="store">Trgovina</string>
    <string name="commission">"Provizija"</string>
    <string name="croatianKuna">"Kuna"</string>
    <string name="croatianKunaShort">"KN"</string>
    <string name="addedProducts">"Dodani proizvodi"</string>
    <string name="addProduct">"Dodaj proizvod"</string>
    <string name="addProducts">"Dodaj proizvode"</string>
    <string name="totalPriceSemicolon">"Ukupna cijena: "</string>
    <string name="numberOfOrders">"Broj narudžbi: "</string>
    <string name="totalValue">"Ukupna vrijednost: "</string>
    <string name="totalCommission">Ukupna provizija: </string>
    <string name="totalOrderValueWithoutCommission">Ukupna vrijednost bez provizije: </string>
    <string name="averageOrderValue">Prosječna vrijednost narudžbe: </string>
    <string name="numberOfDeliveries">Broj dostavljanja: </string>
    <string name="averageDeliveryValue">Prosječna vrijednost dostavljanja: </string>
    <string name="averageDeliveryCommission">Prosječna vrijednost provizije: </string>

    <string name="bought">Kupljeno: </string>
    <string name="quantity">Količina: </string>
    <string name="productPrice">Cijena proizvoda: </string>
    <string name="currentPrice">Trenutna cijena: </string>
    <string name="totalCost">Ukupna cijena: </string>

    <string name="expiredCaps">ISTEKLI</string>
    <string name="date">Datum:</string>
    <string name="orderID">ID:</string>
    <string name="settings">Postavke</string>
    <string name="deliverer">Dobavljač</string>
    <string name="price">"Cijena: "</string>
    <string name="client">Naručitelj</string>
    <string name="more">Dodatno</string>
    <string name="pay">Uplati</string>
    <string name="statistics">Statistika</string>
    <string name="logout">Odjavi se</string>
    <string name="myAddress">"Moja adresa"</string>
    <string name="otherAddress">"Druga adresa"</string>
    <string name="pickDate">Odaberite datum</string>
    <string name="boughtSemicolon">"Kupljeno: "</string>
    <string name="contactSemicolon">"Kontakt: "</string>
    <string name="pickStoreSemicolon">"Odaberite dućan: "</string>
    <string name="validFromSemicolon">"Vrijedi od:</string>
    <string name="delivererSemicolon">"Dobavljač: "</string>
    <string name="storeSemicolon">"Trgovina: "</string>
    <string name="commissionSemicolon">"Provizija: "</string>
    <string name="orders">Narudžbe</string>
    <string name="deliveries">Dostave</string>
    <string name="ordersSemicolon">Narudžbe</string>
    <string name="deliveriesSemicolon">Dostave</string>
    <string name="noProductsFound">Nema proizvoda prema zadanim kriterijima.</string>
    <string name="addGroceryList">Nova kupovna lista</string>
    <string name="delivererAcceptedGLMessage">Trenutno nemate prihvaćene kupovne liste.</string>
    <string name="delivererActiveGLMessage">Trenutno nema aktivnih kupovnih lista u vašem području.</string>
    <string name="delivererIgnoredGLMessage">Trenutno nemate ignorirane kupovne liste.</string>
    <string name="paymentCaps">PLAĆANJE</string>
    <string name="amountPaymentCaps">CIJENA: </string>
    <string name="waitingCaps">PRIČEKAJTE...</string>
    <string name="changeLanguage">Jezik aplikacije</string>
    <string name="chooseCity">Odaberite grad</string>
    <string name="chooseCategory">Odaberite kategoriju</string>
    <string name="ordering">Naručivanje: </string>
    <string name="delivering">Dostavljanje: </string>

    <string name="testButton" translatable="false">Test database</string>
    <string name="storeImage" translatable="false">Store image</string>
    <string name="preferences" translatable="false">Preferences</string>
    <string name="appLangPref" translatable="false">Jezik</string>

    <string name="paymentFailed">Došlo je do pogreške prilikom plaćanja</string>
    <string name="paymentSuccess">Transakcija uspješno obavljena</string>
    <string name="clientActiveGLMessage">Trenutno nemate aktivne kupovne liste.</string>
    <string name="clientPastGLMessage">Trenutno nemate prošle kupovne liste.</string>
    <string name="getGroceryListError">Pogreška prilikom dohvata Grocery List ID-a</string>
    <string name="defaultErrorMessage">Došlo je do greške!</string>
    <string name="anotherAddress">Upišite drugu adresu</string>
    <string name="anotherCity">Upišite grad</string>
    <string name="chooseStore">Odaberite dućan!</string>
    <string name="chooseAddress">Odaberite adresu!</string>
    <string name="chooseTown">Odaberite grad!</string>
    <string name="chooseStartDate">Odaberite početni datum prikazivanja!</string>
    <string name="chooseCommission">Odaberite proviziju!</string>
    <string name="atLeastOneProduct">Morate odabrati barem jedan proizvod!</string>
    <string name="noProductListError">Lista proizvoda nije primljena!</string>
    <string name="storeChangeTitle">Promjena dućana</string>
    <string name="storeChangeMessage">Mijenjanje dućana briše listu proizvoda. Jeste li sigurni da želite promijeniti dućan?</string>
    <string name="groceryListAlreadyAccepted">Kupovna lista je već prihvaćena!</string>
    <string name="groceryListAccepted">Kupovna lista je prihvaćena!</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="logOutQuestion">Odjava?</string>
    <string name="obligatory">Obavezno polje!</string>
    <string name="close">Zatvori</string>
    <string name="saveSuccess">Uspješno kreirano!</string>
    <string name="saveFail">Greška prilikom upisa!</string>
    <string name="acceptGLError">Greška prilikom prihvaćanja narudžbe</string>
    <string name="listIgnored">Lista ignorirana!</string>
    <string name="listIgnoredError">Greška prilikom ignoriranja narudžbe!</string>
    <string name="listReturned">Lista vraćena!</string>
    <string name="listReturnedError">Greška prilikom vraćanja narudžbe!</string>
    <string name="noInternetConnectionMessage">Potrebna je internet veza!</string>

    <!-- User Errors -->

    <string name="emailError">Molimo unesite ispravnu email adresu!</string>
    <string name="passwordError">Minimalno 6 slova i jedan specijalni znak!</string>
    <string name="retypedPasswordError">Lozinke ne odgovaraju!</string>
    <string name="ibanError">Iban mora sadržavati 21 znamenku!</string>
    <string name="phoneError">Ovo nije ispravan broj mobilnog telefona</string>
    <string name="fetchAddressError">Pogreska kod dohvacanja adrese</string>

    <!-- Login Errors -->

    <string name="emailLoginError">Neispravan Email</string>
    <string name="passwordLoginError">Neispravna lozinka</string>
    <string name="userNotFoundError">Nepostojeći korisnik. Registrirajte se!</string>


    <string name="pwRecoverySuccess">Link za promjenu lozinke je poslan. Provjerite email!</string>
    <string name="pwRecoveryFail">Došlo je do greške, provjerite ispravnost email-a!</string>
    <string name="checkInputMessage">Molimo pravilno ispunite sve podatke!</string>
    <string name="fetchLocationError">Greška prilikom dohvaćanja lokacije!</string>
    <string name="usernameInUse">Korisničko ime je već u upotrebi!</string>
    <string name="emailInUse">Već postoji račun s navedenom email adresom! Login?</string>
    <string name="registrationSuccess">Registracija uspješna. Molimo potvrdite email!</string>
    <string name="registrationFail">Greška prilikom registracije!</string>
    <string name="addressChangeSuccess">Adresa uspješno promijenjena!</string>
    <string name="addressChangeFail">Greška prilikom promijene adrese!</string>
    <string name="phoneChangeSuccess">Broj uspješno promijenjen!</string>
    <string name="phoneChangeFail">Greška prilikom promijene broja!</string>
    <string name="postponed">Odgođeno!</string>

    <string name="cancel">Odustani</string>
    <string name="delete">Obriši</string>

    <string name="username">Korisničko ime</string>

    <string name="navigationDrawerOpen">Otvoren drawer</string>
    <string name="navigationDrawerClose">Zatvoren drawer</string>

    <string name="navHeaderInfo" translatable="false">imeprezime@foi.hr</string>


    <string name="menuAbout">O aplikaciji</string>
    <string name="actionSettings">Postavke</string>
    <string name="progressBar" translatable="false">Progress Bar</string>


    <string name="searchLocation">Lokacijsko traženje</string>

    <string name="tab" translatable="false">\u0009</string>
    <string name="commisson">Provizija</string>


    <!-- POLJE POSTAVKE / START -->

    <string name="passwordArray">Lozinka</string>
    <string name="cityArray">Grad/Adresa</string>
    <string name="phoneArray">Mobitel</string>

    <string-array name="settingsArray">
        <item>@string/passwordArray</item>
        <item>@string/cityArray</item>
        <item>@string/phoneArray</item>
    </string-array>

    <!-- POLJE POSTAVKE / END -->

    <!-- SPINNER COLOR START -->

    <style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
        <item name="android:textColor">@color/white</item>
    </style>

    <!-- SPINNER END -->
</resources>
