<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".Controller.LoginActivity">

    <LinearLayout
        android:id="@+id/linlaHeaderProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <EditText
            style="@style/EditTextLogin"
            android:id="@+id/usernameLogin"
            android:hint="@string/username" />

        <EditText
            style="@style/EditTextLogin"
            android:id="@+id/passwordLogin"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgotPasswordLogin"
            style="@style/TextViewWhite"
            android:text="@string/forgotPassword"
            android:onClick="showRecoveryPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:id="@+id/logoAndAppname">

        <ImageView
            style="@style/AppLogoImage" />

        <TextView
            style="@style/TextViewBigWhite"
            android:text="@string/app_name" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonLogin"
            style="@style/ButtonLightBlue"
            android:text="@string/login"
            android:onClick="login"/>

        <TextView
            android:id="@+id/buttonLoginRegistration"
            style="@style/TextViewWhite"
            android:text="@string/registrationOnLogin"
            android:onClick="showRegister"/>
    </LinearLayout>
</RelativeLayout>