<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:gravity="center"
      android:orientation="horizontal">

    <Button
        style="@style/ButtonDarkBlue"
        android:layout_weight="1"
        android:text="@string/activeCaps"
        android:id="@+id/active_deliverer_btn"/>

    <Button
        style="@style/ButtonDarkBlue"
        android:layout_weight="1"
        android:text="@string/acceptedCaps"
        android:id="@+id/accepted_deliverer_btn"/>

    <Button
        style="@style/ButtonDarkBlue"
        android:layout_weight="1"
        android:text="@string/ignoredCaps"
        android:id="@+id/ignored_client_btn"/>

  </LinearLayout>

  <FrameLayout
      android:id="@+id/show_grocery_lists"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>

</LinearLayout>