<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchBoth"
    tools:context=".PaymentHelper.PaymentActivity">

    <LinearLayout
        style="@style/MatchBoth"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/WrapHeightMatchWidth"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardCornerRadius="@dimen/small_margin_in_app"
            app:cardElevation="@dimen/small_margin_in_app"
            android:foreground="?android:selectableItemBackground"
            android:layout_margin="@dimen/small_margin_in_app">

            <TextView
                style="@style/TextViewBigWhite"
                android:textColor="@color/black"
                android:text="@string/paymentCaps"/>

        </android.support.v7.widget.CardView>

        <ImageView
            style="@style/WrapHeightMatchWidth"
            android:src="@drawable/ic_payment_black_24dp" />


        <TextView
            android:id="@+id/totalPrice"
            style="@style/TextViewBigWhite"
            android:textColor="@color/black"
            android:text="@string/amountPaymentCaps"/>

        <LinearLayout
            style="@style/WrapHeightMatchWidth"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_margin_in_app"
            android:id="@+id/waiting">

            <ProgressBar style="@style/WrapHeightMatchWidth" />

            <TextView
                style="@style/TextViewBlack"
                android:text="@string/waitingCaps"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/startPayment"
        style="@style/ButtonLightBlue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pay"/>

</RelativeLayout>