<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controller.SettingsFragment"
    android:background="@color/colorPrimaryDark">

    <!-- ZAGLAVLJE IZBORNIK START -->

    <TextView
        style="@style/TextViewBigWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeHeadingCaps"/>

    <Spinner
        android:background="@drawable/button_light_blue_background"
        android:id="@+id/spinnerOptions"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp" />

    <!-- ZAGLAVLJE IZBORNIK END -->

    <!-- LOZINKA START -->

    <LinearLayout
        android:id="@+id/passwordRecoveryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewBigWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePasswordCaps"/>

    </LinearLayout>

    <!-- LOZINKA END -->

    <!-- GRAD / ADRESA START -->

    <LinearLayout
        android:id="@+id/cityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            style="@style/EditTextWhite"
            android:id="@+id/txtCity"
            android:focusable="false"
            android:layout_margin="10dp"
            android:hint="grad"/>

        <EditText
            style="@style/EditTextWhite"
            android:id="@+id/txtAddress"
            android:layout_margin="10dp"
            android:hint="adresa"/>

    </LinearLayout>

    <!-- GRAD / ADRESA END -->

    <!-- MOBITEL START -->

    <LinearLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            style="@style/EditTextWhite"
            android:inputType="number"
            android:id="@+id/txtPhoneNumber"
            android:layout_margin="10dp"
            android:hint="adresa"/>

    </LinearLayout>

    <!-- MOBITEL END -->

    <Button
        style="@style/ButtonLightBlue"
        android:id="@+id/btnChangeProfile"
        android:text="@string/changeCaps"/>

</LinearLayout>